@@ -52,7 +52,7 @@ class MPDPlaylistTestArtist {
         MPDPlaylistSong.builder()
             .file("file1")
             .title("testSong1")
-            .artistName(artist.getName())
+            .artistName(artist.name())
             .id(1)
             .build();
 
@@ -60,7 +60,7 @@ class MPDPlaylistTestArtist {
         MPDPlaylistSong.builder()
             .file("file2")
             .title("testSong1")
-            .artistName(artist.getName())
+            .artistName(artist.name())
             .id(2)
             .build();
 
@@ -91,7 +91,7 @@ class MPDPlaylistTestArtist {
         .sendCommand(stringArgumentCaptor.capture(), integerArgumentCaptor.capture());
 
     assertEquals(realPlaylistProperties.getRemoveId(), stringArgumentCaptor.getAllValues().get(1));
-    assertEquals((Integer) song1.getId(), integerArgumentCaptor.getAllValues().get(0));
+    assertEquals((Integer) song1.getId(), integerArgumentCaptor.getAllValues().getFirst());
     assertEquals(realPlaylistProperties.getRemoveId(), stringArgumentCaptor.getAllValues().get(2));
     assertEquals((Integer) song2.getId(), integerArgumentCaptor.getAllValues().get(1));
     assertEquals(PlaylistChangeEvent.Event.SONG_DELETED, changeEvent[0].getEvent());
@@ -135,7 +135,7 @@ class MPDPlaylistTestArtist {
         .sendCommand(stringArgumentCaptor.capture(), integerArgumentCaptor.capture());
 
     assertEquals(realPlaylistProperties.getRemoveId(), stringArgumentCaptor.getAllValues().get(1));
-    assertEquals((Integer) song1.getId(), integerArgumentCaptor.getAllValues().get(0));
+    assertEquals((Integer) song1.getId(), integerArgumentCaptor.getAllValues().getFirst());
     assertEquals(realPlaylistProperties.getRemoveId(), stringArgumentCaptor.getAllValues().get(2));
     assertEquals((Integer) song2.getId(), integerArgumentCaptor.getAllValues().get(1));
     assertEquals(PlaylistChangeEvent.Event.SONG_DELETED, changeEvent[0].getEvent());
@@ -149,7 +149,7 @@ class MPDPlaylistTestArtist {
     songs.add(MPDSong.builder().file("file1").title("testSong1").build());
     songs.add(MPDSong.builder().file("file2").title("testSong2").build());
 
-    when(songDatabase.findArtist(artist.getName())).thenReturn(songs);
+    when(songDatabase.findArtist(artist.name())).thenReturn(songs);
 
     final PlaylistChangeEvent[] changeEvent = new PlaylistChangeEvent[1];
     playlist.addPlaylistChangeListener(event -> changeEvent[0] = event);
@@ -159,7 +159,7 @@ class MPDPlaylistTestArtist {
     verify(commandExecutor, times(2))
         .sendCommand(stringArgumentCaptor.capture(), stringArgumentCaptor.capture());
 
-    assertEquals(realPlaylistProperties.getAdd(), stringArgumentCaptor.getAllValues().get(0));
+    assertEquals(realPlaylistProperties.getAdd(), stringArgumentCaptor.getAllValues().getFirst());
     assertEquals("file1", stringArgumentCaptor.getAllValues().get(1));
     assertEquals(realPlaylistProperties.getAdd(), stringArgumentCaptor.getAllValues().get(2));
     assertEquals("file2", stringArgumentCaptor.getAllValues().get(3));
@@ -186,7 +186,7 @@ class MPDPlaylistTestArtist {
     assertAll(
         () ->
             assertEquals(
-                realPlaylistProperties.getAdd(), stringArgumentCaptor.getAllValues().get(0)),
+                realPlaylistProperties.getAdd(), stringArgumentCaptor.getAllValues().getFirst()),
         () -> assertEquals("file1", stringArgumentCaptor.getAllValues().get(1)),
         () ->
             assertEquals(
